[package]
name = "hodor"
version = "0.1.0"
authors = ["Martin Smith <msmith3dart@icloud.com>"]
edition = "2018"
exclude = ["src/bin/*"]

[dependencies]
reqwest = "0.9.7"
select = "0.4.2"
scraper = "0.9.0"
table-extract = "0.2.1"
pbr = "1.0.1"
clap = {version = "2.32.0", features = ["yaml"]}
colored = "1.7.0"
ansi_term = "0.11.0"


[[bin]]
name = "level_0"
path = "src/bin/level_0.rs"


[[example]]
name = "try_scraper"
path = "examples/try_scraper.rs"

[[example]]
name = "lib_test"
path = "examples/lib_test.rs"

[[example]]
name = "argv_test"
path = "examples/argv_test.rs"